--- a/src/index.css
+++ b/src/index.css
@@ -47,4 +47,25 @@
   .padding-b {
     @apply sm:pb-24 pb-12;
   }
+  .background {
+    @apply bg-white dark:bg-slate-900;
+  }
+  .surface {
+    @apply bg-white dark:bg-[rgba(255,255,255,0.05)] ring-1 ring-slate-900/5 shadow-xl;
+  }
+  .primary-color {
+    @apply text-purple-700 dark:text-purple-300;
+  }
+  .primary-bg {
+    @apply bg-purple-700 dark:bg-purple-300;
+  }
+  .secondary-color {
+    @apply text-teal-400;
+  }
+  .secondary-bg {
+    @apply bg-teal-400;
+  }
+  .info-color {
+    @apply text-slate-500 dark:text-slate-300;
+  }
 }
