--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@
     max-width: 1440px;
     margin: 0 auto;
   }
+  .medium-container {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
 }
 
 @layer utilities {
